--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -2,25 +2,31 @@
   box-sizing: border-box;
 }
 
+.center {
+  text-align: center;
+}
+
 body {
   padding-top: 61px;
 }
 
 aside a {
-display: inline-block;
-padding: 10px;
-background: grey;
-width: 100%
-margin-bottom:5px;
-text-decoration: none;
-color: #333;
-transition: all is linear;
-position: relative;
+  display: inline-block;
+  padding: 10px;
+  background: #ccc;
+  width: 100%;
+  margin-bottom: 5px;
+  text-decoration: none;
+  color: #333;
+  /* property name | duration | timing function | delay */
+
+  transition: all 1s linear;
+  position: relative;
 }
 
-aside a:hover
-{background: red;
-margin-left: 10px;
+aside a:hover {
+  background: red;
+  margin-top: 10px;
 }
 
 nav {
@@ -50,14 +56,11 @@ section {
   margin-left: 200px;
 }
 
-aside { 
+aside {
   width: 200px;
   float: left;
 }
 
-aside ul { 
+aside ul {
   padding: 0;
 }
-</style>
-Add Comment Collapse
-
